# Systematic-Trading

./: .env.example  .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml  t.py
.agents/skills/skill-builder/: SKILL.md
.agents/skills/submit-pr/: SKILL.md
.claude/: CLAUDE.md  LUMIBOT.md  settings.json
.claude/hooks/: recon.py  session_start_hook.py
.claude/skills/dead-code-detect/: SKILL.md
.claude/skills/dead-code-detect/references/: import-names.md
.codex/: hooks.json
.codex/agents/: architect_review.toml  brainstorm.toml  code_reviewer.toml  debugger.toml  explain.toml  new_code_review.toml  planner.toml  quality_enforcer.toml  refactor.toml  researcher.toml
docs/: architecture.md
docs/data/: alpaca_account_data_via_lumibot.md  contracts.md  storage.md
docs/infrastructure/: logging.md
docs/portfolio/: sleeve_allocation.md
docs/screeners/: architecture.md  cashflow_champions.md  junk_shorts.md  quality_metrics_research.md  short_screen_research.md
docs/strategies/: csf_champions.md
notebooks/: fund_screener.ipynb
scripts/: build_cashflow_champions.py  launch_trade_ideas_pod.py  prune_parquet_symbols.py  push_daily_prices.py  push_fundamentals.py  reset_dynamo_tables.py  reset_strategy_run.py  update_daily_prices.py  update_fundamentals.py
src/systematic_trading/: __init__.py  backtest.py  config.py  live.py  logging_setup.py
src/systematic_trading/agents/: __init__.py
src/systematic_trading/agents/shared_tools/: correlations.py  prices.py  trade_ideas.py
src/systematic_trading/agents/tools/: __init__.py  fundamentals.py  risk_matrices.py  trade_ideas.py
src/systematic_trading/cloud/: __init__.py  bootstrap.py  digitalocean.py  logs.py  runpod.py
src/systematic_trading/data/: __init__.py  contracts.py  fmp.py  fundamentals_sync.py  price_sync.py  universe.py
src/systematic_trading/data/fmp/: __init__.py  bt.py  live.py
src/systematic_trading/data/providers/: __init__.py
src/systematic_trading/data/repository/: __init__.py  dynamo.py  fundamentals.py  ideas.py  ledger.py  prices.py
src/systematic_trading/domain/: __init__.py  ideas.py  trades.py
src/systematic_trading/screener/: __init__.py
src/systematic_trading/screener/fundamentals/: __init__.py  build.py  data.py  screen.py
src/systematic_trading/screeners/: __init__.py
src/systematic_trading/screeners/csf_champions/: __init__.py  build.py  constants.py  metrics.py  panel.py  screen.py
src/systematic_trading/screeners/junk_shorts/: __init__.py  constants.py  screen.py
src/systematic_trading/screeners/panels/: __init__.py
src/systematic_trading/strategies/: __init__.py  sp500_momentum.py
tests/: test_cashflow_champions.py  test_champions.py  test_prune_parquet_symbols.py  test_screener_v2_metrics.py  test_screener_v2_screen.py  test_smoke.py
tests/cloud/: test_logs.py
tests/data/: test_contracts.py  test_price_sync.py  test_repository_contracts.py  test_universe.py
tests/integration/: test_strategy_registry.py
tests/screener/: test_metrics.py  test_screen.py
tests/strategies/csf_champions/: test_enter_positions.py  test_fill_open_orders.py  test_generate_trade_ideas.py  test_screening.py
(+65 files in other folders)
