[project]
name = "systematic-trading"
version = "0.1.0"
description = "Systematic trading system with agents embedded in the investment process. Lumibot is the infrastructure layer; strategies, agents, and portfolios are our own."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Michael Laret", email = "michaellaret7@gmail.com" }]
dependencies = [
    "agent-harness",
    # Core infrastructure: backtesting + paper/live execution, native Alpaca broker.
    # Pulls in alpaca-py, pandas, numpy, polars, pyarrow, etc. transitively.
    "lumibot==4.5.63",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    # FMP stable-API client (systematic_trading.data.providers.fmp) — prices + fundamentals.
    # Lumibot pulls requests transitively, but we import it directly, so declare it.
    "requests>=2.31",
    "s3fs>=2026.6.0",
    "torch>=2.12.1",
]

[project.scripts]
# Generic runners — select strategies by registry name, e.g. `uv run live sp500_momentum`.
live = "systematic_trading.live:main"
backtest = "systematic_trading.backtest:main"

[project.optional-dependencies]
# Paid/specialty backtesting data sources — install with: uv sync --extra thetadata
thetadata = ["thetadata"]

[dependency-groups]
# Dev tooling. Installed by default with `uv sync`; skip via `uv sync --no-dev`.
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "ipykernel>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/systematic_trading"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
agent-harness = { git = "https://github.com/michaellaret7/Agent-Harness", subdirectory = "packages/agent_harness" }
